Added icon next to link posts on blog page

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -9,10 +9,25 @@
       color: $text-color-primary;
       transition: color 0.1s linear;
 
+      .Icon svg {
+        position: relative;
+        top: 7px;
+        left: 12px;
+        height: 30px;
+        width: 30px;
+        background: $text-color-primary;
+        padding: 7px;
+
+        path {
+          fill: white;
+        }
+      }
+
       &:hover {
         border: none;
         color: $brand-primary;
       }
+
     }
   }
 
