--- a/src/templates/post/blog/components/PostHeader.module.scss
+++ b/src/templates/post/blog/components/PostHeader.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/_mixins.scss';
 @import '../../../../styles/variables.scss';
 
-.Header {
+.PostHeader {
   .Attribution {
     text-align: center;
     font-size: 0.9rem;
