--- a/src/UI-Kit/PostTile/PostTile.module.scss
+++ b/src/UI-Kit/PostTile/PostTile.module.scss
@@ -1,5 +1,4 @@
-@import '../../styles/_variables.scss';
-@import '../../styles/_mixins.scss';
+@import 'foundation';
 
 .PostTile {
   display: block;
