--- a/src/templates/post/blog/components/PostFooter/PostFooter.module.scss
+++ b/src/templates/post/blog/components/PostFooter/PostFooter.module.scss
@@ -1,5 +1,4 @@
-@import '../../../../../styles/_mixins.scss';
-@import '../../../../../styles/variables.scss';
+@import 'foundation';
 
 .PostFooter {
     position: relative;
