Using Post template for both, support header link in post

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -16,6 +16,7 @@
         height: 30px;
         width: 30px;
         background: $text-color-primary;
+        padding: 0.25em;
         padding: 7px;
 
         path {
