moved files around

--- a/src/templates/post/blog/components/PostBody/PostBody.scss
+++ b/src/templates/post/blog/components/PostBody/PostBody.scss
@@ -1,5 +1,5 @@
 @import '../../../../../UI-Kit/Header/Header.module.scss';
-@import '../../../syntaxHighlighting.scss';
+@import './syntaxHighlighting.scss';
 
 .post-body {
   a {
