--- a/src/templates/post/caseStudy/postTemplate.scss
+++ b/src/templates/post/caseStudy/postTemplate.scss
@@ -1,5 +1,4 @@
-@import '../../UI-Kit/Header/Header.module.scss';
-@import './syntaxHighlighting.scss';
+@import '../../../UI-Kit/Header/Header.module.scss';
 
 .post-template {
 
