--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/_variables.scss';
+@import 'foundation';
 
 .Post {
   color: $text-color-secondary;
@@ -9,14 +9,36 @@
       color: $text-color-primary;
       transition: color 0.1s linear;
 
+      .Icon svg {
+        position: relative;
+        transition: all 0.1s ease-in-out;
+
+        top: 7px;
+        left: 12px;
+        height: 30px;
+        width: 30px;
+        background: $text-color-primary;
+        padding: 0.25em;
+        padding: 7px;
+
+        path {
+          fill: white;
+        }
+      }
+
       &:hover {
         border: none;
         color: $brand-primary;
+
+        .Icon svg {
+          transform: rotate(45deg);
+        }
       }
+
     }
   }
 
   .Meta {
-    color: lighten($text-color-secondary, 20%);
+    color: $text-color-tertiary;
   }
 }
