Added meta component

--- a/src/UI-Kit/PostTile/PostTile.module.scss
+++ b/src/UI-Kit/PostTile/PostTile.module.scss
@@ -3,12 +3,8 @@
 .PostTile {
   display: block;
 
-  p {
+  .Description {
     color: $text-color-secondary;
-  }
-
-  .Meta {
-    color: $text-color-tertiary;
   }
 }
 
