--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,47 @@
+@function color($theme, $name) {
+  @if ($theme != 'light' and $theme != 'dark') {
+    @error 'You must pass in either light or dark as the theme';
+  }
+
+  $colors: (
+    primary: (
+      light: #ec4242,
+      dark: #fa5a5a,
+    ),
+    primary-text: (
+      light: #dd0404,
+      dark: #f95b5b,
+    ),
+    text: (
+      light: #444,
+      dark: #ddd,
+    ),
+    text-bold: (
+      light: #222,
+      dark: #eee,
+    ),
+    text-muted: (
+      light: #767676,
+      dark: #b5b5b5,
+    ),
+    caption-bg: (
+      light: #f0f0f0,
+      dark: #111111,
+    ),
+    body-bg: (
+      light: #fff,
+      dark: #2a2a2a,
+    ),
+  );
+
+  $selected-color-map: map-get($colors, $name);
+  @return map-get($selected-color-map, $theme);
+}
+
 $default-sans-serif-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
   Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
   'Segoe UI Symbol';
-$sans-serif-font-stack: 'Work Sans', $default-sans-serif-stack;
+$sans-serif-font-stack: 'Inter', $default-sans-serif-stack;
 
 $text-color-primary: #2a2a2a;
 $text-color-secondary: #7a7a7a;
