--- a/src/UI-Kit/Button/Button.module.scss
+++ b/src/UI-Kit/Button/Button.module.scss
@@ -19,3 +19,19 @@
     background: darken($brand-primary, 15%);
   }
 }
+
+.Button-Light {
+  background: color(light, primary);
+
+  &:hover {
+    background: darken(color(light, primary), 15%);
+  }
+}
+
+.Button-Dark {
+  background: color(dark, primary);
+
+  &:hover {
+    background: darken(color(dark, primary), 15%);
+  }
+}
