--- a/src/templates/post/blog/components/PostBody/PostBody.scss
+++ b/src/templates/post/blog/components/PostBody/PostBody.scss
@@ -68,7 +68,7 @@
   }
 
   blockquote {
-    @include left-border();
+    @include left-border($brand-primary);
     margin-left: 0;
     color: $text-color-secondary;
     font-size: 1.25rem;
