--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -2,18 +2,41 @@
 
 .AboutPage {
   a {
-    color: $brand-primary;
     text-decoration: none;
     border-bottom: 1px solid transparent;
     transition: all 0.1s linear;
-
-    &:hover {
-      border-color: $brand-primary;
-    }
   }
 }
 
 .FeatureImage {
   max-width: 100%;
-  border: 1px solid #2a2a2a;
+  border: 1px solid;
+}
+
+.AboutPage-Light {
+  a {
+    color: color(light, primary-text);
+
+    &:hover {
+      border-color: color(light, primary-text);
+    }
+  }
+
+  .FeatureImage {
+    border-color: color(dark, caption-bg);
+  }
+}
+
+.AboutPage-Dark {
+  a {
+    color: color(dark, primary-text);
+
+    &:hover {
+      border-color: color(dark, primary-text);
+    }
+  }
+
+  .FeatureImage {
+    border-color: color(light, caption-bg);
+  }
 }
