--- a/src/pages/homepage.module.scss
+++ b/src/pages/homepage.module.scss
@@ -16,10 +16,23 @@
     font-weight: normal;
     font-size: 1.675rem;
     letter-spacing: 0px;
-    color: $text-color-secondary;
 
     @include mobile-only {
       font-size: 1.5rem;
     }
+  }
+}
+
+.MainHeader-Light {
+  span,
+  p {
+    color: color(light, text-muted);
+  }
+}
+
+.MainHeader-Dark {
+  span,
+  p {
+    color: color(dark, text-muted);
   }
 }
