--- a/src/UI-Kit/Tile/Tile.module.scss
+++ b/src/UI-Kit/Tile/Tile.module.scss
@@ -1,3 +1,5 @@
+@import 'foundation';
+
 .Tile {
   position: relative;
   overflow: hidden;
@@ -9,7 +11,7 @@
   width: 100%;
   height: 17.5rem;
 
-  border: 1px solid #2a2a2a;
+  border: 1px solid;
   position: relative;
 }
 
@@ -27,4 +29,12 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+
+.Tile-Light {
+  border-color: color(light, img-border);
+}
+
+.Tile-Dark {
+  border-color: color(dark, img-border);
 }
